--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <table witdth="100%"  cellspacing="1" cellpadding="20" border="3" align="center">
     <tr>
         <td  width="50%">
-        <h2> <center><i><big><font color="#111c40">ประวัติส่วนตัว</font></big></i></center>  </h2>
+        <h2> <center><i><big>ประวัติส่วนตัว</big></i></center>  </h2>
         <ul>
             <li>ชื่อ <b><big>นายธีธัช บุญประเสริฐชัย</big></b> </li>
             <li>ชื่อเล่น <b>ปูอัด</b></li>
@@ -41,7 +41,7 @@
         </td>
 
         <td width="50%"> 
-        <h2><center> <i><big><font color="#111c40">ช่องทางการติดต่อ</font> </big></i> </center></h2>
+        <h2><center> <i><big>ช่องทางการติดต่อ </big></i> </center></h2>
         <ul>
             <li>Facebook  -  <a href="https://www.facebook.com/pooad.boon"> Pooad Boon </a>    </li>
             <li>Line id - pooad1148 </li>
