add scitu picture and adjust with css again

--- a/myjourney.html
+++ b/myjourney.html
@@ -16,4 +16,10 @@
             <p></p>
         </div>
 
+        <div class="sci">
+            <center><img id="scitu" src="resources/scitu.jpg"> </center> 
+            <center><dfn>วันที่ไปดูตึกคณะวันแรก </dfn></center>
+         </div>
+
+
 </head>
