add year 4 and end journey

--- a/myjourney.html
+++ b/myjourney.html
@@ -41,7 +41,11 @@
         <b> <div class="year"> ปี 3</div> </b>
         <big>เรียนตามสายสาขาวิชาที่เลือกแล้วทำสหกิจถ้าสามารถทำได้ <b><i>ตั้งใจเรียนถ้าทำได้ :)</i></b></big>
         <hr> 
-    
+        <b> <div class="year"> ปี 4</div> </b>
+        <big>ทำสหกิจและ<b><i>พยายามเรียนให้จบ :)</i></b> พ่อแม่จะได้ภูมิใจ</big>
+        <br>
+        <br>
+        <b><font size="6">------------------<i><font color= "#333399">END JOURNEY</font></i>------------------</font></b>
     </div>
 </body>
 
