add 2picture in myfuture.html

--- a/myfuture.html
+++ b/myfuture.html
@@ -13,3 +13,22 @@
             <h2><marquee direction="right">My Dream Future??</marquee></h2>
             <p></p>
     </div>
+
+
+    <div class="boxpicture">
+        <div class="left-box">
+            <h2><center>สมัย ม.ปลาย</center></h2>
+            <hr>
+                <div class="img-resize1">
+                    <center><img src="resources/pooadcstu.jpg"></center>
+                </div>
+        </div>
+        <div class="right-box">
+            <h2><center>ชอบเล่นเกมครับ</center></h2>
+            <hr>
+            <div class="img-resize2">
+                <center><img src="resources/pooadcom.jpg"></center>
+                <center><dfn>ไปเล่นร้านเกมกับเพื่อน :)</dfn></center>
+            </div>
+        </div>
+    </div> 
