adjust picture size and describe pic

--- a/myfuture.html
+++ b/myfuture.html
@@ -17,18 +17,17 @@
 
     <div class="boxpicture">
         <div class="left-box">
-            <h2><center>สมัย ม.ปลาย</center></h2>
+            <h2><center>ชื่อปูอัดครับ :)</center></h2>
             <hr>
-                <div class="img-resize1">
+                <div class="img-resize3">
                     <center><img src="resources/pooadcstu.jpg"></center>
                 </div>
         </div>
         <div class="right-box">
-            <h2><center>ชอบเล่นเกมครับ</center></h2>
+            <h2><center>กำลังเขียนโค้ด</center></h2>
             <hr>
-            <div class="img-resize2">
+            <div class="img-resize4">
                 <center><img src="resources/pooadcom.jpg"></center>
-                <center><dfn>ไปเล่นร้านเกมกับเพื่อน :)</dfn></center>
             </div>
         </div>
     </div> 
