--- a/myjourney.html
+++ b/myjourney.html
@@ -7,9 +7,7 @@
 
     <body>
         <header>
-            <h1><font size="10">
-                
-                  ꔫ My Journey ꔫ</font></h1>
+            <h1><font size="10">ꔫ My Journey ꔫ</font></h1>
         </header>
     
         <div class="intro">
