change intro again

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <div class="intro">
-        <h2><marquee direction="right">WELCOME TO MY CSTU JOURNEY :)</marquee></h2>
+        <h2><marquee direction="right">WELCOME TO MY CSTU JOURNEY / MY DREAMFUTURE</marquee></h2>
         <p></p>
     </div>
 
