--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     </header>
 
     <div class="intro">
-        <h2><marquee direction="right">WELCOME TO MY CSTU JOURNEY & MY DREAM FUTURE !!! </marquee></h2>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="myjourney.html">My Journey</a></li>
+                <li><a href="myfuture.html">My Future</a></li>
+            </ul>
+        </nav>
         <p></p>
     </div>
 
