add nav bar in journey.html and myfuture.html

--- a/myfuture.html
+++ b/myfuture.html
@@ -10,7 +10,13 @@
             <h1><font size="10"> ꔫ My Future ꔫ</font></h1>
         </header>
     <div class="intro">
-            <h2><marquee direction="right">My Dream Future??</marquee></h2>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="myjourney.html">My Journey</a></li>
+                <li><a href="myfuture.html">My Future</a></li>
+            </ul>
+        </nav>
             <p></p>
     </div>
 
