--- a/myjourney.html
+++ b/myjourney.html
@@ -11,7 +11,15 @@
         </header>
     
         <div class="intro">
-            <h2><marquee direction="right">My CSTU 4 Years JOURNEY!!!</marquee></h2>
+            <h2>
+                <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="myjourney.html">My Journey</a></li>
+                    <li><a href="myfuture.html">My Future</a></li>
+                    </ul>
+            </nav>
+        </h2>
             <p></p>
         </div>
 
