add header emoji and adjust fontsize in nav bar

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 
 <body>
     <header>
-        <h1><font size="10">My CSTU Story</font></h1>
+        <h1><font size="10">🔥My CSTU Story🔥</font></h1>
     </header>
 
     <div class="intro">
+    <h2>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home </a></li>
                 <li><a href="myjourney.html">My Journey</a></li>
                 <li><a href="myfuture.html">My Future</a></li>
             </ul>
-        </nav>
-        <p></p>
+        </nav>  
     </div>
 
     <div class="me">
