--- a/myfuture.html
+++ b/myfuture.html
@@ -7,18 +7,21 @@
 
     <body>
         <header>
-            <h1><font size="10"> ꔫ My Future ꔫ</font></h1>
+            <h1><font size="10"> 🎯 My Future 🎯</font></h1>
         </header>
-    <div class="intro">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="myjourney.html">My Journey</a></li>
-                <li><a href="myfuture.html">My Future</a></li>
-            </ul>
-        </nav>
-            <p></p>
-    </div>
+
+
+        <div class="intro">
+            <h2>
+                <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="myjourney.html">My Journey</a></li>
+                    <li><a href="myfuture.html">My Future</a></li>
+                </ul>
+                </nav>
+        </h2>         
+        </div>
 
 
     <div class="boxpicture">
