--- a/myjourney.html
+++ b/myjourney.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <h1><font size="10">ꔫ My Journey ꔫ</font></h1>
+            <h1><font size="10">🎗️ My Journey 🎗️</font></h1>
         </header>
     
         <div class="intro">
@@ -17,10 +17,9 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="myjourney.html">My Journey</a></li>
                     <li><a href="myfuture.html">My Future</a></li>
-                    </ul>
-            </nav>
-        </h2>
-            <p></p>
+                </ul>
+                </nav>
+        </h2>         
         </div>
 
         <div class="sci">
