--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1><font size="10">🔥My CSTU Story🔥</font></h1>
+        <h1><marquee🔥My CSTU Story🔥</h1>
     </header>
 
     <div class="intro">
