--- a/myfuture.html
+++ b/myfuture.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <h1><font size="10"> 🎯 My Future 🎯</font></h1>
+            <h1> 🎯 My Future 🎯</h1>
         </header>
 
 
