--- a/myjourney.html
+++ b/myjourney.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <h1><font size="10">🎗️ My Journey 🎗️</font></h1>
+            <h1>🎗️ My Journey 🎗️</h1>
         </header>
     
         <div class="intro">
