add marquee to header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1><marquee🔥My CSTU Story🔥</h1>
+        <h1><marquee direction="RIGHT" scrollamount="15">🔥My CSTU Story🔥</marquee></h1>
     </header>
 
     <div class="intro">
