--- a/myfuture.html
+++ b/myfuture.html
@@ -7,7 +7,7 @@
 
     <body>
         <header>
-            <h1> 🎯 My Future 🎯</h1>
+            <h1> <marquee direction="RIGHT" scrollamount="15">🎯 My Future 🎯</marquee></h1>
         </header>
 
 
