--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <h2>
         <nav>
             <ul>
-                <li><a href="index.html">Home </a></li>
-                <li><a href="myjourney.html">My Journey</a></li>
-                <li><a href="myfuture.html">My Future</a></li>
+                |<li><a href="index.html"><i>Home</i> </a></li>
+                |<li><a href="myjourney.html">My Journey</a></li>
+                |<li><a href="myfuture.html">My Future</a></li>|
             </ul>
         </nav>  
     </div>
