--- a/myjourney.html
+++ b/myjourney.html
@@ -14,9 +14,9 @@
             <h2>
                 <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="myjourney.html">My Journey</a></li>
-                    <li><a href="myfuture.html">My Future</a></li>
+                    |<li><a href="index.html">Home</a></li>
+                    |<li><a href="myjourney.html"><i>My Journey</i></a></li>
+                    |<li><a href="myfuture.html">My Future</a></li>|
                 </ul>
                 </nav>
         </h2>         
